--- a/wordsFinder/wordsFinder.csproj
+++ b/wordsFinder/wordsFinder.csproj
@@ -37,9 +37,10 @@
         <Reference Include="System.Core"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="GetData.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="Word.cs" />
+        <Compile Include="Dict.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
