--- a/wordsFinder/wordsFinder.csproj
+++ b/wordsFinder/wordsFinder.csproj
@@ -37,7 +37,7 @@
         <Reference Include="System.Core"/>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="GetData.cs" />
+        <Compile Include="Data.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="Dict.cs" />
